Preparations for 2.0 release - Added "Lite" modset with directory mappings - Updated dependencies - Refactorings - Updated README - Removed no longer existing ftp remote