@@ -3,14 +3,17 @@ package de.alf.helper;
 import de.alf.logging.Logger;
 
 import java.io.File;
-import java.util.*;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
  * Helper to perform tasks with urls and paths
  *
  * @author Alf
- * @version 1.0
+ * @version 2.0-SNAPSHOT
  * @since 14.03.2020
  */
 public class PathHelper {
@@ -34,11 +37,11 @@ public class PathHelper {
 	 * Maps download Urls to the file system paths
 	 *
 	 * @param baseUrl   url start
-	 * @param gSyncPath path to the rosenrudel path in Roaming (standard: %AppData%/sals-rosenrudel)
+	 * @param gSyncPath path to the rosenrudel path in Roaming (standard: %APPDATA%/sals)
 	 * @param pathKeys  url suffix
 	 * @return Key: Url, Value: Path
 	 */
-	public static Map<String, String> buildUrlPathMap(String baseUrl, String gSyncPath, ArrayList<String> pathKeys) {
+	public static Map<String, String> buildUrlPathMap(String baseUrl, String gSyncPath, List<String> pathKeys) {
 		if (!gSyncPath.endsWith(SLASH)) {
 			gSyncPath += SLASH;
 		}
@@ -54,7 +57,7 @@ public class PathHelper {
 	}
 
 	/**
-	 * Tries to match the given path to an sub directory
+	 * Tries to match the given path to a subdirectory
 	 *
 	 * @param savePath path
 	 * @return the path with subdirectory or null if {@link PathHelper#isSkipNonMatchable()} returns true
@@ -75,17 +78,17 @@ public class PathHelper {
 	 * Replaces all //, \ and \\ with /
 	 *
 	 * @param path which should be reworked
-	 * @return path with replaced shlashes
+	 * @return path with replaced slashes
 	 */
 	private static String replaceWrongSlashes(String path) {
 		return path.replaceAll("(//|\\\\|\\\\\\\\)", SLASH);
 	}
 
 	private static Integer evaluateSubDirectory(String savePath) {
-		if (zero.stream().anyMatch(savePath::startsWith)) {
-			return 0;
-		} else if (two.stream().anyMatch(savePath::startsWith)) {
-			return 2;
+		if (one.stream().anyMatch(savePath::startsWith)) {
+			return 1;
+		} else if (five.stream().anyMatch(savePath::startsWith)) {
+			return 5;
 		} else if (six.stream().anyMatch(savePath::startsWith)) {
 			return 6;
 		} else {
@@ -103,32 +106,26 @@ public class PathHelper {
 		PathHelper.skipNonMatchable = skipNonMatchable;
 	}
 
-	private static final List<Integer> matchableSubDirectories = Arrays.asList(0, 2, 6);
+	private static final List<Integer> matchableSubDirectories = Arrays.asList(1, 5, 6);
 
-	private static final List<String> zero = Arrays.asList("@3denEnhanced", "@ace", "@ACEX", "@ace_nouniformrestrictions",
-			"@ace_particles", "@ace_tracers", "@Achilles", "@ACRE2", "@acre_sys_gm", "@AdvancedSlingLoading",
-			"@AdvancedTowing", "@Align", "@BoxLoader", "@BoxloaderACE", "@BrushClearing", "@CBA_A3", "@CUPTerrainsACEComp",
-			"@CUPTerrains_Core", "@DismountWhereYouLook", "@dznExtendedJamming", "@EasyTrack", "@ExtendedFortifications",
-			"@GRAD_Trenches", "@Immerse", "@InteriorsForCUP", "@LAMBS_Danger.fsm", "@LAMBS_suppression", "@L_climb",
-			"@MrSanchezHeadlamps", "@PaddleMod", "@PLPMarkers", "@RR_audio", "@RR_babe_WOS", "@RR_backwardsComp",
-			"@RR_CBASettings", "@RR_commons_resources", "@RR_Persistence_Client", "@RR_wallAvoidance", "@rspncaves",
-			"@Suppress", "@VET_Unflipping", "@vurtualsCarSeatAndStretcher", "@ZeusEnhanced");
+	private static final List<String> one = Arrays.asList("@3denEnhanced", "@ACRE Animations", "@ACRE2", "@AWESome",
+			"@AdvancedSlingLoading", "@Align", "@BoxLoader", "@BoxloaderACE", "@BrighterFlares", "@BrushClearing", "@CBA_A3",
+			"@DismountWhereYouLook", "@EasyTrack", "@ExtendedFortifications", "@GRAD_Trenches", "@Gruppe Adler Pace Count Beads",
+			"@Helicopter Turbulence", "@Immerse", "@LAMBS_Danger.fsm", "@LAMBS_suppression", "@L_climb", "@MrSanchezHeadlamps",
+			"@PLPMarkers", "@PaddleMod", "@RR_CBASettings", "@RR_Commons_Resources", "@RR_Persistence_Client", "@RR_audio",
+			"@RR_babe_WOS", "@RR_backwardsComp", "@RR_mapStuff", "@RR_wallAvoidance", "@RideWhereYouLook", "@Suppress",
+			"@VET_Unflipping", "@Zeus Enhanced - ACE3 Compatibility", "@ZeusEnhanced", "@ace", "@ace_nouniformrestrictions",
+			"@ace_particles", "@ace_realisticdispersion", "@ace_tracers", "@acre_sys_gm", "@dznExtendedJamming", "@rspncaves",
+			"@vurtualsCarSeatAndStretcher");
 
-	private static final List<String> two = Arrays.asList("@3CB_Factions", "@@Horror_Mod", "@ACE3__BWMod_Compatibility",
-			"@ace_compat_rhs_afrf3", "@ace_compat_rhs_gref3", "@ace_compat_rhs_usf3", "@AfricanRebels", "@Anizay",
-			"@Beketov", "@Bozcaada", "@Bundeswehr_Kleiderkammer_PBW_", "@BWMod", "@CUPMaps2v0", "@Desert Battlegrounds",
-			"@Em_Buildings", "@Esseker_Fixed", "@FapovoIsland", "@Hellanmaa", "@hl2Zombies", "@hlEcho", "@Ihantala",
-			"@Ihantala_Winter", "@Jbad", "@Kidal", "@Kujari", "@Kunduz_Afghanistan", "@LYTHIUM", "@MBGBuildingsRosche",
-			"@MCAGCC29Palms", "@PLP_Containers", "@Pulau", "@RHSAFRF", "@RHSGREF", "@RHSPKL", "@RHSSAF", "@RHSUSAF",
-			"@RKSLMk5LAndingCraft", "@Rosche", "@RR_RHS_sounds", "@Ruegen", "@Ruha", "@Summa", "@TRIA", "@Vinjesvingen",
-			"@Virolahti");
+	private static final List<String> five = List.of("@Blastcore Murr Edition");
 
-	private static final List<String> six = Arrays.asList("@IFA3_AIO_LITE", "@NorthernFronts", "@NorthernFrontsTerrains");
+	private static final List<String> six = Arrays.asList("@CUP ACE3 Compatibility Addon - Terrains", "@CUP Terrains - Core", "@CUP Terrains - Maps 2.0", "@InteriorsForCUP");
 
 	public static void printKnownSubDirectories() {
 		System.out.println("Directories :" + matchableSubDirectories.stream().map(Object::toString).collect(Collectors.joining(", ")));
-		System.out.println("0: " + String.join(", ", zero));
-		System.out.println("2: " + String.join(", ", two));
+		System.out.println("1: " + String.join(", ", one));
+		System.out.println("5: " + String.join(", ", five));
 		System.out.println("6: " + String.join(", ", six));
 	}
 }
